--- a/View/profile-setup.html
+++ b/View/profile-setup.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile setup</title>
-    <link href="Style/style-profile-setup.css" rel="stylesheet" type="text/css">
+    <link href="../Style/style-profile-setup.css" rel="stylesheet" type="text/css">
     <link href="https://rawgit.com/alexk111/ngImgCrop/master/compile/unminified/ng-img-crop.css">
-    <link href="Library/bootstrap.css" rel="stylesheet">
-    <link href="Library/bootstrap-theme.css" rel="stylesheet">
-    <script src="Library/angular.min.js"></script>
-    <script src="app.js"></script>
-    <script src="Library/ng-file-upload-shim.min.js"></script>
-    <script src="Library/ng-file-upload.min.js"></script>
-    <script src="Library/ng-file-upload-all.min.js"></script>
+    <link href="../Library/bootstrap.css" rel="stylesheet">
+    <link href="../Library/bootstrap-theme.css" rel="stylesheet">
+    <script src="../Library/angular.min.js"></script>
+    <script src="../Script/app.js"></script>
+    <script src="../Library/ng-file-upload-shim.min.js"></script>
+    <script src="../Library/ng-file-upload.min.js"></script>
+    <script src="../Library/ng-file-upload-all.min.js"></script>
     <script src="https://rawgit.com/alexk111/ngImgCrop/master/compile/unminified/ng-img-crop.js"></script>
 </head>
 <body ng-controller="listOfPublicationsCtrl">
