--- a/Style/Style.css
+++ b/Style/Style.css
@@ -2,17 +2,21 @@ body {
     background-image: url("../Images/main_bacground.jpg")
 }
 
+li {
+    list-style-type: none;
+}
+
+.border-container {
+    background-color: #e6efff;
+}
+
 .head-block{
     height:150px;
 }
 
 .row .mainTitle {
-    position: absolute;
+    position: relative;
     left: 47%
-}
-
-li {
-    list-style-type: none;
 }
 
 .btn-info-add {
@@ -27,97 +31,103 @@ li {
     margin-left: 44px;
 }
 
-.main-content {
+.name-for-title-field-tags {
+    display: inline-block;
+    margin-top: 0;
+    padding-left: 20px;
+}
+
+.field-for-filtration-tags {
+    width: 250px;
+    height: 41px;
+}
+
+.border-container .main-content {
     margin-top: 40px;
     padding-bottom: 50px;
 }
 
-.user-info {
+.border-container .main-content .user-info {
     font-size: 35px;
 }
 
-.post__time {
+.border-container .main-content .post__time {
     font-size: 20px;
     margin-left: 12%;
 }
 
-.btn-delete-entry {
+.border-container .main-content .title-info {
+    font-weight: 600;
+}
+
+.border-container .main-content .btn-delete-entry {
     display: flex;
     float: right;
 }
 
-.title-info {
-    font-weight: 600;
-}
-
-.head-block-for-add-record {
-    height:130px;
-}
-
-.field-for-add-record {
-    position: absolute;
-    margin-left: 123px;
-    top: -8px;
-}
-
-.field-for-add-tags {
-    position: absolute;
-
-    top: 370px;
-    left: 125px;
-}
-
-.inscription-for-add-record {
-    position: absolute;
-    font-size: 33px;
-    top: -17px;
-}
-
-.content-for-add-record {
-    position: absolute;
-    font-size: 33px;
-    top: 40px;
-}
-
-.tags-for-add-record {
-    position: absolute;
-    font-size: 33px;
-    margin-top: 270px;
-}
-
-.text-for-add-record {
-    position: absolute;
-    margin-left: 123px;
-    top: 50px;
-}
-
-.button-add-information {
-    position: absolute;
-    top: 283px;
-    right: -140px;
-}
-
-.border-container {
-    background-color: #dcf7ff;
+.border-container .main-content .btn-edit-entry {
+   display: flex;
+    float: right;
 }
 
 #pagination {
     text-align: center;
 }
 
+.head-block-for-add-record {
+    margin-left: -80px;
+    height:130px;
+}
+
+.inscription-for-add-record {
+     font-size: 33px;
+}
+
+.field-for-add-record {
+    width: 900px;
+    margin-left: -60px;
+    margin-top: 12px;
+}
+
+.content-for-add-record {
+    font-size: 33px;
+}
+
+.text-for-add-record {
+    width: 900px;
+    margin-left: -155px;
+}
+
+.tags-for-add-record {
+    font-size: 33px;
+}
 
 .scroll-list-tag {
-    position: absolute;
-    width: 215px;
-    top: 279px;
-    left: 142px;
+    margin-left: -60px;
+    width: 215px;;
     font-size: 25px;
 }
 
 .text-between-add-tag {
-    position: absolute;
-    top: 325px;
-    left: 230px;
+    margin-left: -190px;
     font-size: 25px;
     font-weight: 600;
 }
+
+.field-for-add-tags {
+    margin-left: -320px;
+    height: 32px;
+}
+
+.button-add-information {
+    display: flex;
+    float: right;
+    margin-right: 93px;
+}
+
+
+
+
+
+
+
